src/test/deca/context/invalid/created/while.deca
//while.deca:3:10: La condition doit etre de type Boolean
{
    while(5)
    {}
}